test_suite5/ALAN/test_suite/alan-2022-examples/failing/005700_mutation.alan
source O begin leave 2 - get end
